# Quorum

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  DEVELOPMENT_HANDOFF.md  DEVELOPMENT_PLAN.md  README.md  TECHNICAL_SPEC.md  TODO.md  package-lock.json  package.json  vercel.json
contracts/quorum_core/: Cargo.toml
contracts/quorum_core/src/: lib.rs  test.rs
contracts/quorum_core/test_snapshots/test/: admin_can_withdraw_platform_fee.1.json  collaborator_can_withdraw_balance.1.json  demo_zero_fee_routes_full_amount_to_collaborators.1.json  duplicate_check_in_is_idempotent.1.json  emits_core_and_pass_proof_events.1.json  free_event_claim_mints_pass_without_balances.1.json  organizer_can_check_in_pass.1.json  purchase_mints_pass_and_splits_balance.1.json  rejects_check_in_for_token_from_another_event.1.json  rejects_check_in_from_non_organizer.1.json  rejects_duplicate_free_claim.1.json  rejects_duplicate_purchase.1.json  rejects_free_claim_when_capacity_is_full.1.json  rejects_free_claim_with_nonzero_amount.1.json  rejects_invalid_split_total.1.json  rejects_paid_purchase_when_capacity_is_full.1.json  rejects_withdraw_without_balance.1.json
docs/: APP_UI_REFACTOR_ROADMAP.md  BROWSER_QA.md  CONTRACT_DEPLOYMENT.md  DEFERRED_PRODUCT_WORK.md  DEMO_EVIDENCE.md  FE_V2_DESIGN_SPEC.md  FE_V2_QA_REPORT.md  FRIEND_DEPLOYMENT_HANDOFF.md  FRONTEND_REDESIGN.md  HACKATHON_DEMO_RUNBOOK.md  HACKATHON_PROOF_INVENTORY.md  HACKATHON_SUBMISSION_DRAFT.md  HACKATHON_SUBMISSION_RECOVERY_PLAN.md  HOSTED_RELEASE_EVIDENCE.json  INTERNAL_UI_DONOR_ADOPTION_PLAN.md  LIVE_SIGNING_HANDOFF.md  (+13 more)
(+195 files in other folders)
