[package]
name = "quorum_core"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
quorum_pass_nft = { path = "../quorum_pass_nft" }
soroban-sdk = { workspace = true, features = ["testutils"] }
